2007-06-10  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/CategoryPlot.java
	(getRangeAxisIndex): New method.

----------  JFREECHART 1.0.6 RELEASED ------------------------

2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>

	* swt/org/jfree/experimental/swt/SWTGraphics2D.java
	(getSwtColorFromPool): Removed JDK 1.5 specific code.

2007-06-15  David Gilbert  <david.gilbert@object-refinery.com>

	* ant/build.xml: Updated version number to 1.0.6,
	* source/org/jfree/chart/renderer/xy/XYBarRenderer.java
	(XYBarRenderer): Changed default value for drawBarOutline.

2007-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/plot/AbstractPieLabelDistributor.java: 
	New file,
	* source/org/jfree/chart/plot/PieLabelDistributor.java: Now extends 
	AbstractPieLabelDistributor,
	* source/org/jfree/chart/plot/PieLabelRecord: Implemented Serializable,
	* source/org/jfree/chart/plot/PiePlot.java
	(labelDistributor): New field,
	(PiePlot(PieDataset)): Initialise new field,
	(getLabelDistributor): New method,
	(setLabelDistributor): New method.

2007-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/LookupPaintScale.java
	(PaintItem.value): Changed from Number to double,
	(PaintItem(Number, Paint)): Changed first parameter to double,
	(compareTo): Updated for change in value type,
	(equals): Likewise,
	(add(Number, Paint)): Deprecated,
	(add(double, Paint)): New method,
	(getPaint): Updated.

2007-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/xy/XYBoxAndWhiskerRenderer.java
	(XYBoxAndWhiskerRenderer(double)): Replaced deprecated method call,
	(drawHorizontalItem): Call addEntity(),
	(drawVerticalDataItem): Likewise.

2007-06-14  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/renderer/category/StatisticalLineAndShapeRenderer.java